--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "2024-bio-lab-artx",
   "module": "index.ts",
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/terminal-kit": "^2.5.6"
+    "@types/terminal-kit": "^2.5.6",
+    "@yao-pkg/pkg": "^5.15.0",
+    "bun-types": "^1.1.30"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "terminal-kit": "^3.1.1"
-  }
+  },
+  "pkg": {
+    "targets": [
+      "node20-linux-x64",
+      "node20-macos-x64",
+      "node20-macos-arm64",
+      "node20-win-x64"
+    ],
+    "options": ["experimental-specifier-resolution=node"],
+    "assets": ["index.cjs", "node_modules/terminal-kit", "node_modules/chroma-js"]
+  },
+  "bin": "index.cjs"
 }
